<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="dde_overlay_no_network">Internet connection is not available</string>
    <string name="DummyContentDescription">dummy</string>
    <string name="rate_us_key_demo">rate_us_key_demo</string>
    <string name="rate_us_manager_share_title">SHARE_TITLE_PLACEHOLDER</string>
    <string name="rate_us_manager_share_subject">SHARE_SUBJECT_PLACEHOLDER</string>
    <string name="rate_us_manager_share_body">SHARE_BODY_PLACEHOLDER</string>
    <string name="app_name">AntiVirus</string>
    <string name="upgrade_dialog_title">License updated</string>
    <string name="upgrade_dialog_pro_upgrade_message">You have upgraded to %1$s. Enjoy!</string>
    <string name="upgrade_dialog_downgrade_message">"You are using now %1$s.
Upgrade now to get our PRO features."</string>
    <string name="upgrade_dialog_trial_extend_message">Your %1$s trial has been extended. The trial ends in %2$s days. Enjoy!</string>
    <string name="upgrade_dialog_close_button">Got it</string>
    <string name="upgrade_dialog_downgrade_positive_button"><b>Upgrade now</b></string>
    <string name="upgrade_dialog_downgrade_negative_button">No, thanks</string>
    <string name="upgrade_notification_licence_pro">Upgraded to PRO</string>
    <string name="upgrade_notification_licence_free">Updated to FREE</string>
    <string name="upgrade_notification_trail_extended">PRO trial extended</string>
    <string name="help_preference">Help</string>
    <string name="ias_help_contact_header">Contact Us</string>
    <string name="ias_help_contact_body">Report a problem or send feedback</string>
    <string name="ias_progress_dialog_title">Connecting...</string>
    <string name="ias_alert_dialog_title">Communication error</string>
    <string name="ias_alert_dialog_message">"Unable to connect to server. Please make sure you're connected to the Internet."</string>
    <string name="title_help_preference">Online Help</string>
    <string name="body_help_preference">Get help at support.avg.com</string>
    <string name="summary_intent_preference">See our frequently asked questions</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_summary">Review our Terms of Service</string>
    <string name="avg_title">AVG Technologies</string>
    <string name="avg_summary">Try our other top-rated Android apps</string>
    <string name="follow_us_preference">Follow Us</string>
    <string name="videos_title">"AVG's YouTube Channel"</string>
    <string name="videos_summary">Watch our video tutorials</string>
    <string name="title_About_preference">About</string>
    <string name="ok">OK</string>
    <string name="license_activation_block_title">License</string>
    <string name="main_menu_subscribe">Subscribe</string>
    <string name="menu_more">More</string>
    <string name="billing_not_supported_close">Close</string>
    <string name="billing_not_supported_middle">Our PRO upgrade is currently not available in your region.</string>
    <string name="billing_not_supported_bottom">Please continue to enjoy the essential protection of AVG Antivirus FREE.</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="system">System</string>
    <string name="anti_theft_passcode_email_instructions">Email Instructions</string>
    <string name="anti_theft_passcode_explain">If this device is ever lost or stolen, you can send text message commands to it from another phone by following these steps:</string>
    <string name="anti_theft_passcode_explain1">1. From another phone, create a new text message to send to your stolen or lost device.</string>
    <string name="anti_theft_passcode_explain2">2. In your text message, type one of the following commands plus your Anti-Theft password.</string>
    <string name="anti_theft_passcode_explain_example">(Example: AVGLock 2345)</string>
    <string name="anti_theft_passcode_explain_no_passcode">If this device is ever lost or stolen, you can send text message commands to it from another phone in order to:</string>
    <string name="anti_theft_passcode_explain_no_passcode_bullet_alarm">Sound an alarm on this device</string>
    <string name="anti_theft_passcode_explain_no_passcode_bullet_locate">Locate this device on Google Maps</string>
    <string name="anti_theft_passcode_explain_no_passcode_bullet_lock">Lock this device</string>
    <string name="anti_theft_passcode_explain_no_passcode_bullet_wipe">Wipe personal data from this device</string>
    <string name="anti_theft_passcode_explain_no_passcode_create">Create Password</string>
    <string name="anti_theft_passcode_explain_no_passcode_create_explain">To activate this feature, please create an Anti-Theft password to be used in your text message commands:</string>
    <string name="main_menu_upgrade">Upgrade</string>
    <string name="scan_button_cancle">Cancel</string>
    <string name="callMessageFilterMenuItemSort">Views</string>
    <string name="callMessageFilterMenuItemContacts">Contacts</string>
    <string name="callMessageFilterAllIncomingMessages">All Incoming Messages</string>
    <string name="callMessageFilterSuspiciousMessages">Suspicious Messages</string>
    <string name="callMessageFilterBlockedMessages">Blocked Messages</string>
    <string name="callMessageFilterAllContacts">All Contacts</string>
    <string name="callMessageFilterBlockedContacts">Blocked Contacts</string>
    <string name="callMessageFilterTrustedContacts">Trusted Contacts</string>
    <string name="sdcard">SDcard</string>
    <string name="downloads">Downloads</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="pictures">Pictures</string>
    <string name="main_menu_follow_us">Follow Us</string>
    <string name="pro_features_thank_you">Thanks for choosing AVG!</string>
    <string name="pro_features_enjoy">"Enjoy the app and your &lt;br/>&lt;font color='#e6e4ac'>30 days of PRO features&lt;/font>"</string>
    <string name="pro_features_enjoy_new">"Upgrade now and enjoy &lt;br/> all our &lt;font color='#31abd9'>PRO&lt;/font> benefits"</string>
    <string name="pro_features_not_enough">30 days not enough?</string>
    <string name="pro_features_buy_pro_now_new">Upgrade Now</string>
    <string name="pro_features_continue_with_free_new">No Thanks</string>
    <string name="pro_features_buy_pro_now">Buy PRO Now</string>
    <string name="pro_features_continue_with_free">Continue</string>
    <string name="pro_features_camera_trap">Camera Trap</string>
    <string name="pro_features_app_locker">App Lock</string>
    <string name="pro_features_sim_lock">Device Lock</string>
    <string name="pro_features_app_backup">App Backup</string>
    <string name="pro_features_camera_trap_new">"Camera Trap&lt;br/>&lt;small>See who's trying to break into your phone&lt;/small>"</string>
    <string name="pro_features_app_locker_new">App Lock&lt;br/>&lt;small>Password-protects your apps &amp; settings&lt;/small></string>
    <string name="pro_features_sim_lock_new">Device Lock&lt;br/>&lt;small>Locks your phone if the SIM is replaced&lt;/small></string>
    <string name="pro_features_app_backup_new">App Backup&lt;br/>&lt;small>Backs up your apps to your SD card&lt;/small></string>
    <string name="menu_location">Location</string>
    <string name="sip_no_threats_found_so_far">No threats found so far...</string>
    <string name="sip_calculating_time">Calculating...</string>
    <string name="sip_item_scan_sub_title">items scanned</string>
    <string name="sip_unknown_percentage">0%</string>
    <string name="sip_percentage_sub_title">completed</string>
    <string name="sip_unknown_items_count">0</string>
</resources>