<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:avg="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ab_btn_contact" android:id="@id/menu_item_contacts" android:title="@string/callMessageFilterMenuItemContacts" avg:showAsAction="always" />
    <item android:icon="@drawable/ab_btn_filter" android:id="@id/menu_item_filter" android:title="@string/callMessageFilterMenuItemSort" avg:showAsAction="always">
        <menu>
            <item android:id="@id/all_incoming_messages" android:title="@string/callMessageFilterAllIncomingMessages" />
            <item android:id="@id/suspicious_messages" android:title="@string/callMessageFilterSuspiciousMessages" />
            <item android:id="@id/blocked_messages" android:title="@string/callMessageFilterBlockedMessages" />
        </menu>
    </item>
</menu>