<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="@dimen/antitheft_how_to_layout_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollViewsMain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/textViewCreatePasscodeExplain" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayoutScroll" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextGreyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anti_theft_passcode_explain_no_passcode" />
            <TextView android:textAppearance="@style/TextGreyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain_no_passcode_bullet_alarm" android:drawableLeft="@drawable/bullet" android:drawablePadding="5.0dip" />
            <TextView android:textAppearance="@style/TextGreyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain_no_passcode_bullet_locate" android:drawableLeft="@drawable/bullet" android:drawablePadding="5.0dip" />
            <TextView android:textAppearance="@style/TextGreyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain_no_passcode_bullet_lock" android:drawableLeft="@drawable/bullet" android:drawablePadding="5.0dip" />
            <TextView android:textAppearance="@style/TextGreyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain_no_passcode_bullet_wipe" android:drawableLeft="@drawable/bullet" android:drawablePadding="5.0dip" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/buttonCreatePasscode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/anti_theft_passcode_explain_no_passcode_create" android:layout_alignParentBottom="true" />
    <TextView android:textAppearance="@style/TextWhiteMedium" android:id="@id/textViewCreatePasscodeExplain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/anti_theft_passcode_explain_no_passcode_create_explain" android:layout_above="@id/buttonCreatePasscode" />
</RelativeLayout>