<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="@dimen/antitheft_how_to_layout_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollViewsMain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/buttonEmailInstructions" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayoutScroll" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextGreyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anti_theft_passcode_explain" />
            <TextView android:textAppearance="@style/TextWhiteMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain1" />
            <TextView android:textAppearance="@style/TextWhiteMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain2" />
            <TextView android:textAppearance="@style/TextGreyExtraSmall" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anti_theft_passcode_explain_example" />
            <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="5.0dip" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/buttonEmailInstructions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/anti_theft_passcode_email_instructions" android:layout_alignParentBottom="true" />
</RelativeLayout>