<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:pro_item="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/thanks_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/pro_features_thank_you" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/TextWhiteLarge" />
    <TextView android:gravity="center_horizontal" android:id="@id/enjoy_app_view" android:paddingTop="17.0dip" android:paddingBottom="17.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pro_features_enjoy" android:layout_below="@id/thanks_text_view" android:layout_centerHorizontal="true" style="@style/TextWhiteLarge" />
    <RelativeLayout android:gravity="bottom" android:id="@id/button_part" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:id="@id/not_enough" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pro_features_not_enough" android:layout_centerHorizontal="true" style="@style/TextWhiteMedium" />
        <ImageView android:id="@id/arrow" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_portrait" android:layout_below="@id/not_enough" android:layout_centerHorizontal="true" />
        <FrameLayout android:id="@id/strut" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_below="@id/arrow" android:layout_centerHorizontal="true" />
        <Button android:id="@id/buy_pro" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/pro_features_buy_pro_now" android:singleLine="true" android:layout_below="@id/strut" android:layout_alignRight="@id/strut" android:layout_alignParentLeft="true" style="@style/GreenButtonHolo" />
        <Button android:id="@id/continue_with_free" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/pro_features_continue_with_free" android:singleLine="true" android:layout_below="@id/strut" android:layout_alignLeft="@id/strut" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/button_part" android:layout_below="@id/enjoy_app_view">
        <RelativeLayout android:id="@id/features_part" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/features_strut" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerHorizontal="true" />
            <com.antivirus.ui.main.ProFeaturesItemView android:id="@id/camera_trap_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_alignRight="@id/features_strut" pro_item:image="@drawable/camera_trap" pro_item:text="@string/pro_features_camera_trap" />
            <com.antivirus.ui.main.ProFeaturesItemView android:id="@id/app_locker_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_alignLeft="@id/features_strut" pro_item:image="@drawable/app_locker" pro_item:text="@string/pro_features_app_locker" />
            <com.antivirus.ui.main.ProFeaturesItemView android:id="@id/sim_lock_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_below="@id/camera_trap_item" android:layout_alignRight="@id/features_strut" pro_item:image="@drawable/sim_lock" pro_item:text="@string/pro_features_sim_lock" />
            <com.antivirus.ui.main.ProFeaturesItemView android:id="@id/app_backup_item" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/app_locker_item" android:layout_alignLeft="@id/features_strut" pro_item:image="@drawable/app_backup" pro_item:text="@string/pro_features_app_backup" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>