<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:HorizontalAnimatedProgressBar="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:ellipsize="end" android:gravity="bottom" android:id="@id/itemInProgressTextView" android:layout_width="wrap_content" android:layout_height="25.0sp" android:text="@string/sip_calculating_time" android:maxLines="1" android:singleLine="true" android:layout_toLeftOf="@id/percentageValueTextView" android:layout_alignBottom="@id/percentageValue" android:layout_alignParentLeft="true" style="@style/TextWhiteSmall" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:id="@id/percentageValueTextView" android:layout_width="wrap_content" android:layout_height="25.0sp" android:layout_marginRight="5.0dip" android:layout_marginBottom="-2.0dip" android:text="@string/sip_unknown_percentage" android:layout_toLeftOf="@id/percentageValue" android:layout_alignBottom="@id/percentageValue" />
    <TextView android:gravity="bottom" android:layout_gravity="center" android:id="@id/percentageValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sip_percentage_sub_title" android:layout_alignParentTop="true" android:layout_alignParentRight="true" style="@style/TextWhiteMedium" />
    <com.avg.ui.general.customviews.HorizontalAnimatedProgressBar android:id="@id/scanProgressBar" android:layout_width="fill_parent" android:layout_height="15.0dip" android:layout_marginTop="18.0dip" android:layout_below="@id/itemInProgressTextView" HorizontalAnimatedProgressBar:progress="0" HorizontalAnimatedProgressBar:max="100" />
    <TextView android:id="@id/threatCounterTextView" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sip_no_threats_found_so_far" android:layout_below="@id/scanProgressBar" android:layout_alignParentLeft="true" style="@style/TextWhiteLarge" />
    <Button android:textColor="@color/blue_note" android:id="@id/cancel_button" android:background="@color/transparent_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scan_button_cancle" android:singleLine="true" android:layout_below="@id/scanProgressBar" android:layout_alignParentRight="true" style="@style/TextWhiteLarge" />
    <RelativeLayout android:id="@id/scanInProgressDetailsLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/itemInProgressTextView">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_horizontal" android:id="@id/itemCounterTextView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sip_unknown_items_count" android:layout_centerHorizontal="true" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/itemsScanned" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sip_item_scan_sub_title" android:layout_below="@id/itemCounterTextView" android:layout_centerHorizontal="true" style="@style/TextWhiteLarge" />
    </RelativeLayout>
</RelativeLayout>