<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextWhiteMedium" android:gravity="center" android:layout_gravity="center_horizontal" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/billing_not_supported_middle" android:lines="2" />
    <TextView android:textAppearance="@style/TextWhiteMedium" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/billing_not_supported_bottom" android:lines="2" />
    <Button android:textAppearance="@style/TextWhiteLarge" android:gravity="center" android:layout_gravity="bottom" android:id="@id/buttonClose" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/billing_not_supported_close" style="@style/BlueButtonHolo" />
</LinearLayout>